[package]
name = "zhifeng_security_util"
version = "0.0.20240825"
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
libc = "0.2.155"

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.52.0", features = [ "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_System_Console"]}

[dependencies]
sha3 = "0.10.8"
chacha20poly1305 = "0.10.1"

[lints.clippy]
# Warnings
# - Be careful with cloning smart pointers. Sometimes `.clone()` doesn't really clone.
clone_on_ref_ptr = "warn"
# Allows
# - I think sometimes `flag == true` is more readable.
bool_comparison = "allow"
# - I think sometimes `num.clone()` is clearer.
clone_on_copy = "allow"